2010-10-08	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/violation.pm: Fixes to violation priorities. They were
	inforced in the reverse order which broke scans when using default
	configuration files.

	* pf/bin/pfcmd: Better error reporting on file permission errors.
	Fixes #1088;
	http://www.packetfence.org/bugs/view.php?id=1088

	* pf/t/coding-style.t: New coding-style test suite that validates
	presence of tab characters for now. Added to all and smoke test
	suites.

2010-10-07      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/SNMP/HP/Controller_MSM710.pm, pf/README_SWITCHES, 
	pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for HP ProCurve
	MSM710 Mobility Controller.

2010-10-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Added HP ProCurve Access Point and
	Controller fingerprints and Ricoh MFP.

	* pf/conf/templates/httpd.conf.apache22: Apache debugging
	instructions. Commented by default only there as a reminder.

2010-09-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/loadMACintoDB.pl: Added minimal POD for file and added to 
	minimum test suites

2010-09-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Updated documentation
	to reflect the re-worked FreeRADIUS modules using post-auth instead of
	authorize calls.

	* pf/addons/802.1X/rlm_perl_packetfence.pl, UPGRADE: Re-worked the 
	module to work on post-auth calls instead of authorize calls. This 
	avoid work being done when the EAP credentials don't even pass and
	improves overall correctness of the system (autoregistration in this
	module is now possible). It can also improve performance in network 
	with a lot of wrong 802.1X requests as they no longer exercise the 
	PacketFence module. Backport of fix #1034 from trunk;
	http://www.packetfence.org/bugs/view.php?id=1034
